Fixed compilation and tests of CLI module with Java 9.